refactor: use ObjectMapper for JSON instead of fragile string manipulation